--- a/practice-JS/practice5/index.html
+++ b/practice-JS/practice5/index.html
@@ -26,7 +26,7 @@
             <p class="msg" id="alertPassword" data-req="Password harus diisi!" data-min="Password minimal 8 karakter!"></p>
           </div>
           <div class="form-input">
-            <input type="text" class="input-text" id="phone" name="phone" placeholder="No Telp" data-target="alertPhone">
+            <input type="text" class="input-text number-only" id="phone" name="phone" placeholder="No Telp" data-target="alertPhone">
             <p class="msg" id="alertPhone" data-req="No Telphone harus diisi!" data-invalid-phone="Yang anda masukan bukan number!"></p>
           </div>
           <div class="form-input">
