--- a/practice-JS/practice7/index.html
+++ b/practice-JS/practice7/index.html
@@ -9,15 +9,11 @@
 <body>
 	<div class="container">
 		<div class="box">
-			<div class="button js-effect">
-				<button class="btn">Hide</button>
-			</div>
+			<button class="btn js-effect">Hide</button>
 			<div class="image">
 				<img src="assets/images/personalize.png" alt="personalize" />
 			</div>
 		</div>
-
-		
 	</div>
 	<script src="assets/js/jquery-3.6.0.min.js"></script>
 	<script src="assets/js/run.js"></script>
