--- a/practice-JS/practice7/index.html
+++ b/practice-JS/practice7/index.html
@@ -1,21 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link rel="stylesheet" href="assets/css/style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
-	<div class="container">
-		<div class="box">
-			<button class="btn js-effect">Hide</button>
-			<div class="image">
-				<img src="assets/images/personalize.png" alt="personalize" />
-			</div>
-		</div>
-	</div>
-	<script src="assets/js/jquery-3.6.0.min.js"></script>
-	<script src="assets/js/run.js"></script>
+  <div class="container">
+    <div class="box">
+      <button class="btn js-effect">Hide</button>
+      <div class="image">
+        <img src="assets/images/personalize.png" alt="personalize" />
+      </div>
+    </div>
+  </div>
+
+  <div class="slide">
+    <div class="container">
+      <div class="slide-box">
+        <div class="slide-item">
+          <img src="../../images/man-pointing-at-laptop-screen-analytics.jpg" alt="man pointing at laptop screen analytics" />
+        </div>
+        <div class="slide-item">
+          <img src="../../images/man-pointing-at-laptop-screen-analytics.jpg" alt="man pointing at laptop screen analytics" />
+        </div>
+        <div class="slide-item">
+          <img src="../../images/man-pointing-at-laptop-screen-analytics.jpg" alt="man pointing at laptop screen analytics" />
+        </div>
+        <div class="slide-item">
+          <img src="../../images/man-pointing-at-laptop-screen-analytics.jpg" alt="man pointing at laptop screen analytics" />
+        </div>
+        <div class="slide-item">
+          <img src="../../images/man-pointing-at-laptop-screen-analytics.jpg" alt="man pointing at laptop screen analytics" />
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="assets/js/jquery-3.6.0.min.js"></script>
+  <script src="assets/js/run.js"></script>
 </body>
 </html>
