--- a/practice/jquery/practice4/index.html
+++ b/practice/jquery/practice4/index.html
@@ -5,14 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../normalize.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <div class="main">
     <div class="team">
       <div class="container">
-        <div class="team-row-list js-list">
-
+        <div class="team__wrapper js-list">
+          <div class="col-4"> 
+            <div class="team__item">
+              <div class="team__item_img">
+                <img src="../../../images/uhkti/1.png" alt="uhkti1" />
+              </div>
+              <div class="team__item_txt">
+                <h3 class="team__item_txt_name">John Doe</h3>
+                <p class="team__item_txt_position">Designer</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
