update practice4 jq

--- a/practice/jquery/practice4/index.html
+++ b/practice/jquery/practice4/index.html
@@ -13,39 +13,27 @@
     <div class="team">
       <div class="container">
         <div class="team__wrapper js-list">
-          <div class="col-4"> 
-            <div class="team__item">
-              <div class="team__item_img">
-                <img src="../../../images/uhkti/1.png" alt="uhkti1" />
-              </div>
-              <div class="team__item_txt">
-                <h3 class="team__item_txt_name">John Doe</h3>
-                <p class="team__item_txt_position">Designer</p>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </div>
 
-  <div class="popup-team js-popup-modal">
-    <div class="popup-container">
-      <div class="popup-box">
-        <div class="popup-body">
-          <button type="button" class="popup-close js-close"><i class="fa fa-times"></i></button>
-          <div class="popup-img">
-            <img src="assets/img/2.jpeg" alt=""/>
+  <div class="popup js-popup-modal">
+    <div class="popup__wrapper">
+      <div class="popup__box">
+        <div class="popup__body">
+          <button type="button" class="popup__close js-close"><i class="fa fa-times"></i></button>
+          <div class="popup__img">
+            <img src="../../../images/uhkti/1.png" alt="" />
           </div>
-          <h2 class="popup-name">Lorem, ipsum.</h2>
-          <p class="popup-position">Lorem ipsum dolor sit, amet.</p>
-          <ul class="popup-sosmed">
-            <li><a href="#" class="facebook"><i class="fa fa-facebook"></i>facebok</a></li>
-            <li><a href="#" class="twitter"><i class="fa fa-twitter"></i>twitter</a></li>
-            <li><a href="#" class="instagram"><i class="fa fa-instagram"></i>instagram</a></li>
-          </ul>
-          <div class="popup-text">
-            <p class="popup-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus assumenda vitae nobis itaque neque voluptas praesentium laudantium et, ipsa debitis accusamus cumque quos molestias dicta soluta veniam blanditiis sequi, architecto facere distinctio molestiae. Voluptatum minima dolorem recusandae possimus molestiae animi!</p>
+          <div class="popup__txt">
+            <h2 class="popup__txt__name">Lorem, ipsum.</h2>
+            <p class="popup__txt__position">Lorem ipsum dolor sit, amet.</p>
+            <ul class="popup__txt__sosmed">
+              <li><a href="#" class="facebook"><i class="fa fa-facebook"></i>facebok</a></li>
+              <li><a href="#" class="twitter"><i class="fa fa-twitter"></i>twitter</a></li>
+              <li><a href="#" class="instagram"><i class="fa fa-instagram"></i>instagram</a></li>
+            </ul>
+            <p class="popup__txt__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus assumenda vitae nobis itaque neque voluptas praesentium laudantium et, ipsa debitis accusamus cumque quos molestias dicta soluta veniam blanditiis sequi, architecto facere distinctio molestiae. Voluptatum minima dolorem recusandae possimus molestiae animi!</p>
           </div>
         </div>
       </div>
