--- a/practice/jquery/practice6/index.html
+++ b/practice/jquery/practice6/index.html
@@ -13,10 +13,10 @@
   <div class="container">
     <div class="tab js-tab">
       <ul class="tab__nav">
-        <li class="tab__nav_link active" data-tab="tab-1">Tab One</li>
-        <li class="tab__nav_link" data-tab="tab-2">Tab Two</li>
-        <li class="tab__nav_link" data-tab="tab-3">Tab Three</li>
-        <li class="tab__nav_link" data-tab="tab-4">Tab Four</li>
+        <li class="tab__nav_link active" data-tab="#tab-1">Tab One</li>
+        <li class="tab__nav_link" data-tab="#tab-2">Tab Two</li>
+        <li class="tab__nav_link" data-tab="#tab-3">Tab Three</li>
+        <li class="tab__nav_link" data-tab="#tab-4">Tab Four</li>
       </ul>
 
       <div id="tab-1" class="tab__content active">
@@ -103,7 +103,7 @@
         </ul>
       </div>
       <div id="tab-3" class="tab__content">
-        <ul class="accordion__list ">
+        <ul class="accordion__list js-accordion">
           <li class="accordion__item ">
             <h3 class="accordion__item__title">How much does a website cost?</h3>
             <div class="accordion__item__body">
@@ -164,7 +164,7 @@
         </ul>
       </div>
       <div id="tab-4" class="tab__content">
-        <ul class="accordion__list ">
+        <ul class="accordion__list js-accordion">
           <li class="accordion__item ">
             <h3 class="accordion__item__title">How much does a website cost?</h3>
             <div class="accordion__item__body">
@@ -246,7 +246,7 @@
         </ul>
       </div>
       <div id="tab-22" class="tab__content">
-       <ul class="accordion__list ">
+       <ul class="accordion__list js-accordion">
           <li class="accordion__item ">
             <h3 class="accordion__item__title">How much does a website cost?</h3>
             <div class="accordion__item__body">
@@ -297,7 +297,7 @@
         </ul>
       </div>
       <div id="tab-32" class="tab__content">
-        <ul class="accordion__list ">
+        <ul class="accordion__list js-accordion">
           <li class="accordion__item ">
             <h3 class="accordion__item__title">How much does a website cost?</h3>
             <div class="accordion__item__body">
@@ -358,7 +358,7 @@
         </ul>
       </div>
       <div id="tab-42" class="tab__content">
-        <ul class="accordion__list ">
+        <ul class="accordion__list js-accordion">
           <li class="accordion__item ">
             <h3 class="accordion__item__title">How much does a website cost?</h3>
             <div class="accordion__item__body">
