--- a/practice/jquery/practice7/index.html
+++ b/practice/jquery/practice7/index.html
@@ -32,7 +32,7 @@
           </form>
           <div class="search-result">
             <p>Tidak ada data</p>
-            <ul class="search-result-list">
+            <ul class="search-result-list js-result-list">
 
             </ul>
           </div>
